# SearchEngineProject

./: .clangd  .gitignore  CMakeLists.txt  README.md  testSorter
src/: Main.cpp  Main.java  TestDynamicArray.cpp  test.cpp
src/components/hashers/: BasicHasher.cpp  BasicHasher.h  SimpleFingerprint.cpp  SimpleFingerprint.h
src/components/preprocessors/: BasicPreprocessor.cpp  BasicPreprocessor.h  BasicPreprocessorHandlesPunctuation.cpp  BasicPreprocessorHandlesPunctuation.h  BasicPreprocessorHandlesWhitespaceChars.cpp  BasicPreprocessorHandlesWhitespaceChars.h  BasicPreprocessorWordCleaner.cpp  BasicPreprocessorWordCleaner.h
src/components/rankers/: CombinedTFIDFRanker.cpp  CombinedTFIDFRanker.h  MostMatchesRanker.cpp  MostMatchesRanker.h  RegexTFIDFRanker.cpp  RegexTFIDFRanker.h  TFIDFRanker.cpp  TFIDFRanker.h
src/components/searchers/: BasicSearcher.cpp  BasicSearcher.h  BooleanSearcher.cpp  BooleanSearcher.h  RegexSearch.cpp  RegexSearch.h
src/components/sorters/: MergeSort.cpp  MergeSort.h  RadixSort.cpp  RadixSort.h  testSorter.cpp
src/components/stores/: BasicHashTable.cpp  BasicHashTable.h  BurstTrieDeltaDynamicStore.cpp  BurstTrieDeltaDynamicStore.hpp  BurstTrieDeltaDynamicStoreRegex.cpp  BurstTrieDeltaDynamicStoreRegex.h  BurstTrieDeltaDynamicStoreRegex.hpp  BurstTrieEliasFanoDynamicStore.cpp  BurstTrieEliasFanoDynamicStore.h  BurstTrieEliasFanoDynamicStore.hpp  BurstTrieEliasFanoDynamicStoreRegex.cpp  BurstTrieEliasFanoDynamicStoreRegex.h  BurstTrieEliasFanoDynamicStoreRegex.hpp  BurstTrieEliasFanoStaticStore.cpp  BurstTrieEliasFanoStaticStore.hpp  BurstTrieRegexStore.cpp  BurstTrieRegexStore.h  BurstTrieStore.cpp  BurstTrieStore.h  CompactTrieStore.cpp  CompactTrieStore.h  CompressibleBurstTrieDynamicStore.cpp  CompressibleBurstTrieStore.cpp  DictionaryWithDocId.cpp  DictionaryWithDocId.h  DictionaryWithTrieAndDocId.cpp  DictionaryWithTrieAndDocId.h  DocBlock.cpp  DocBlock.h  DynamicFKS.cpp  DynamicFKS.h  DynamicFKSRadixTree.cpp  DynamicFKSRadixTree.hpp  DynamicFKSRadixTreeRegex.cpp  DynamicFKSRadixTreeRegex.hpp  FuzzyDynamicFKSRadixTree.cpp  FuzzyDynamicFKSRadixTree.hpp  FuzzyTreeWrapper.cpp  FuzzyTreeWrapper.hpp  GenericDATWithDocId.cpp  (+33 more)
src/components/test/: LabelTest.cpp  TestIndeces.cpp  regexTester.cpp  test.cpp  test_helpers.h
src/core/: Index6.cpp  Index6.h  interfaces.h  tui.hpp
src/extras/basic/: AlphaMap.h  ChainSet.cpp  ChainSet.h  Dictionary.h  (+27 more)
src/indexes/: Index10.hpp  Index11.hpp  Index12.hpp  Index5.cpp  Index5.h  Index6.hpp  Index7.hpp  Index8.hpp  Index9.h  Index9.hpp  index6.hpp  index7.h  index7.hpp
(+18 files in other folders)
